--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@delirius/color-thief-node": "^1.0.0",
     "@types/express": "^4.17.15",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
